# Learning-Beacon

./: .gitignore  CMakeLists.txt  Learning Beacon.sln  Learning Beacon.sln.bak  README.md  testSWEProject.sln
Learning Beacon/: Learning Beacon.filters  Learning Beacon.vcxproj  Screen.cpp  Screen.h  main.cpp  mathGame.cpp
SWEGroupProject/: SWEGroupProject.sln
SWEGroupProject/SWEGroupProject/: SWEGroupProject.cpp  SWEGroupProject.vcxproj  SWEGroupProject.vcxproj.filters
src/: SWEGroupProject.cpp  testSWEProject.cpp  testSWEProject.vcxproj  testSWEProject.vcxproj.filters
testSWEProject/: Screen.cpp  Screen.h  mathGame.h  testSWEProject.cpp  testSWEProject.vcxproj  testSWEProject.vcxproj.filters  typingLines.txt  unitTesting.cpp
